<resources>
    <string name="app_name">Module_2_Lesson_4_hw_2</string>
    <string name="captionName">All by 3 :)</string>
    <string name="pictures">Pictures</string>
    <string name="anecdotes">Anecdotes</string>
    <string name="signs">Signs</string>
    <string name="quotes">Quotes</string>
    <string name="images_of_sea">Images of sea</string>
    <string name="images_of_emotions">Images of emotions</string>
    <string name="about_author">About author</string>
    <string name="button_back">Back</string>
    <string name="anecdotes_1">|1| Parrots And the Bird.
        This one is quite popular which centers around a man who lived in Haiderpur and owned
        a lot of parrots. He was devoted to his parrots and fed them a wide variety of foods.
        The man went to the store and bought a new gorgeous bird, which he took home. When the
        parrots saw that lovely bird, they were envious. As a result, all of the parrots devised
        a plot to assassinate the bird. When the bird was attacked by parrots, the guy saw it and
        intervened to save the bird. The man abandoned the parrots in the wild because of their
        bad behaviour. Moral of the story: The story reminds us that being envious of others may
        lead to self-harm.
    </string>
    <string name="anecdotes_2">|2| Never Complain.
        This story is simply one of the best ones. It revolves around the hottest time of the year.
        The sun was scorching hot. Two passengers were travelling down a sandy road with no
        trees on either side. They came upon a tree with large leaves and branches stretched out
        like an umbrella as they looked for some shade from the blazing heat. They sat in the
        pleasant, dense shade of the tree, their stuff on the ground. “What a worthless tree that
        is!” one traveller tells the other after taking a break. It doesn’t produce any fruit in
        the least.” The tree felt squeezed and screamed, “You ungrateful soul!” after hearing this.
        On the one hand, you’re seeking refuge from the sun’s scorching heat in my cool shade, and
        on the other, you’re dismissing me as worthless. Get up and leave the area right away, or
        you’ll get burnt again.” Moral of the story: Stop complaining and always be grateful for
        what you have in your hands. Some others don’t even have what you have, so start
        appreciating what you have.
    </string>
    <string name="anecdotes_3">|3| The king and his monkey friend.
        In ancient times there was a king. His name was Agrpanthaka Sen. The king was brave and
        peace-loving. He always helped the needy and everyone was happy during his reign. His best
        friend was a wise monkey, Batuknath. The king was always accompanied by his monkey friend
        everywhere. Once, a saint came to meet the king. He told the king that a giant is stealing
        food from everyone but no one dares to stop him because he is so big. He described that
        the giant has spike-like big fangs, Big elephant-like ears, and big claws. The Saint
        requested the king to help him. After hearing about the giant, Agrpanthaka assured the
        saint that he will help him and capture the king. But the giant was too big and powerful.
        Thus the king decided to seek the help of his monkey friend Batuknath. he explained
        everything to Batuknath. He smiled and asked the king to take him as well when he’ll go to
        capture the giant. The next day the king and his monkey friend went to capture the giant.
        On their way, Batuknath advised the king to buy a trumpet, some crackers, a big carpet,
        and some spear spikes. King didn’t know why his friend made him buy those things. After a
        long journey of weeks, they finally arrived at the lair where that giant was living.
        Inside the lair, the big giant was sleeping. Batuknath asked the king to hide somewhere
        and the king did so. Then Batuknath started playing the trumpets they brought on their
        way. Since trumpets were loud the giant woke up from sleep. He asked angrily “ who is
        it ?”, Batuknath again blew the trumpet and relied “ Ha Ha Ha Ha I am the king of Giants,
        I have come here to teach you a lesson. You are a thief…what a shame !, Batuk further
        said “I am waiting for you outside your lair…..since I am so big I cannot enter your lair.
        But when you’ll come outside I will capture you. Hahahahahahah”. After hearing this the
        giant got sacred a bit and decided not to go outside. The giant asked the Batuk that if
        he is the giant king himself then show him some proof. Batuknath already knew it would
        happen, thus he threw spear spiked into the lair and said “ See….these are my teeth.
        Hahahahaha”. After seeing the spikes the giant started to panic. Then Batuknath lighted
        some crackers, after hearing loud bangs of crackers the giant asked from inside “w..what
        is happening ?”. Batuknath answered growling “ I was just clapping because I am so happy
        that I will capture you today…haahahahahahahaha”. After hearing this the giant got too
        scared that he started crying. He pled Batuknath while crying “buhuhuuuuu….please forgive
        me O King. I will stop stealing things from people”. Now Batuknath got his chance and
        said “baahahahahaha…alright poor giant. I can forgive you but you have to come outside.
        And keep your eyes close. I am very-very scary, If you’ll see me you” ll lose
        consciousness. So the giant came outside while keeping his eyes closed. The moment he
        came outside King Agrpanthak seized the giant with carpet and took him to his prison.
        The king thanked his monkey friend Batuknath for his intelligence.
    </string>
    <string name="signs_1">
        |1| Stormy August - for a long autumn.
    </string>
    <string name="signs_2">
        |2| Summer is dry and hot - winter is snowy and frosty.
    </string>
    <string name="signs_3">
        |3| Sparrows fly in flocks - for dry and clear weather.
    </string>
    <string name="quotes_1">
        |1| Life isn\'t about finding yourself. Life is about creating yourself.
    </string>
    <string name="quotes_2">
        |2| Better keep yourself clean and bright, you are the window through which you must see the world.
    </string>
    <string name="quotes_3">
        |3| Imagination is the beginning of creation. You imagine what you desire, you will what you imagine and at last you create what you will.
    </string>
    <string name="about_author_text">
        Hello, my name is Elias. I\'m trying to figure out how to create the most modern app :)
    </string>
</resources>