<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAuthorActivity">

    <Button
        android:id="@+id/btBackAboutAuthor"
        style="@style/ButtonStyle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCategory"
        style="@style/CaptionTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/about_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTextAboutAuthor"
        style="@style/TextStyle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/about_author_text"
        app:layout_constraintEnd_toEndOf="@+id/tvCategory"
        app:layout_constraintStart_toStartOf="@+id/tvCategory"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory" />
</androidx.constraintlayout.widget.ConstraintLayout>