<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnecdotesActivity">


    <TextView
        android:id="@+id/tvCategory"
        style="@style/CaptionTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/anecdotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btBackAnecdotes"
        style="@style/ButtonStyle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/svAnecdotes_1"
        android:layout_width="320dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="160dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAnecdotes_1"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/anecdotes_1" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/svAnecdotes_2"
        android:layout_width="320dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/svAnecdotes_1"
        app:layout_constraintStart_toStartOf="@+id/svAnecdotes_1"
        app:layout_constraintTop_toBottomOf="@+id/svAnecdotes_1">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="160dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAnecdotes_2"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anecdotes_2" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/svAnecdotes_3"
        android:layout_width="320dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/svAnecdotes_2"
        app:layout_constraintStart_toStartOf="@+id/svAnecdotes_2"
        app:layout_constraintTop_toBottomOf="@+id/svAnecdotes_2">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="160dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvAnecdotes_3"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anecdotes_3" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>